# rust-countdown

./: .gitignore  Cargo.toml  avg.txt  curl-format.txt
animation/: Cargo.toml
animation/src/: encoder.rs  frames.rs  main.rs
nodeserver/: index.js  package.json
server/src/: main.rs
