[package]
name = "animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
gif = "0.12.0"
image = "0.24.5"
imageproc = "0.23.0"
libwebp = "0.1.2"
openh264 = "0.3.2"
rusttype = "0.9.3"
